--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TNS Food & Drink</title>
+    <title>Holy Coffe</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
 </head>
 
 <body>
    <header>
    <div class="logo">
-        <img src="images/logo1.jpg">
+    <img src="images/logocf.png">
    </div>
 
    <div class="menu">
@@ -65,13 +64,26 @@
 
 </header>
     <section id="slider">
-        <div class="slider-container">
+        <div class="aspect-ratio-169">
             <img src="images/anhnen.jpg" >
-
-
+            <img src="images/cafe1.jpg" >
+            <img src="images/cafe2.jpg" >
+        </div>
     </section>
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    
+</body>
+<script>
+const imgPosition = document.querySelectorAll(".aspect-ratio-169 img")
+// console.log(imgPosition)
+imgPosition.forEach(function(image,index){
+// console.log(image,index)
+// image.style.
+})
+</script>
+
+
+<script src="js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
